objects/ssot__VehicleDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccelerationTimeText__c</fullName>
        <label>Acceleration Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdBlueCapacityNumber__c</fullName>
        <label>AdBlue Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdBlueCapacityUomId__c</fullName>
        <label>AdBlue Capacity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuxiliaryBatteryTypeText__c</fullName>
        <label>Auxiliary Battery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BatteryCapacityNumber__c</fullName>
        <label>Battery Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BatteryCapacityUomId__c</fullName>
        <label>Battery Capacity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BodyTypeText__c</fullName>
        <label>Body Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Co2EmissionNumber__c</fullName>
        <label>CO2 Emission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Co2EmissionUomId__c</fullName>
        <label>CO2 Emission UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CombinedFuelEconomyText__c</fullName>
        <label>Combined Fuel Economy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CombinedFuelEconomyUomId__c</fullName>
        <label>Combined Fuel Economy UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurbWeightNumber__c</fullName>
        <label>Curb Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurbWeightUomId__c</fullName>
        <label>Curb Weight UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoorCount__c</fullName>
        <label>Door Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DoorStyleType__c</fullName>
        <label>Door Style Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrivetrainType__c</fullName>
        <label>Drivetrain Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmissionStandardTypeText__c</fullName>
        <label>Emission Standard Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngineCubicCapacityNumber__c</fullName>
        <label>Engine Cubic Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EngineName__c</fullName>
        <label>Engine Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExtraUrbanFuelEconomyNumber__c</fullName>
        <label>Extra Urban Fuel Economy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExtraUrbanFuelEconomyUomId__c</fullName>
        <label>Extra Urban Fuel Economy UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyClassText__c</fullName>
        <label>Fuel Efficiency Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelTankCapacityNumber__c</fullName>
        <label>Fuel Tank Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelTankCapacityUomId__c</fullName>
        <label>Fuel Tank Capacity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelType__c</fullName>
        <label>Fuel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeoCountry__c</fullName>
        <label>Geo Country</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HeightNumber__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HeightUomId__c</fullName>
        <label>Height UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LengthNumber__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LengthUomId__c</fullName>
        <label>Length UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainBatteryTypeText__c</fullName>
        <label>Main Battery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumBatteryRangeNumber__c</fullName>
        <label>Maximum Battery Range</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumBatteryRangeUomId__c</fullName>
        <label>Maximum Battery Range UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumGrossWeightNumber__c</fullName>
        <label>Maximum Gross Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumGrossWeightUomId__c</fullName>
        <label>Maximum Gross Weight UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumTorqueNumber__c</fullName>
        <label>Maximum Torque</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumTorqueUomId__c</fullName>
        <label>Maximum Torque UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumBatteryRangeNumber__c</fullName>
        <label>Minimum Battery Range</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumBatteryRangeUomId__c</fullName>
        <label>Minimum Battery Range UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModelCode__c</fullName>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoxEmissionNumber__c</fullName>
        <label>NOx Emission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NoxEmissionUomId__c</fullName>
        <label>NOx Emission UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TopSpeedNumber__c</fullName>
        <label>Top Speed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TopSpeedUomId__c</fullName>
        <label>Top Speed UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPowerNumber__c</fullName>
        <label>Total Power</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPowerUomId__c</fullName>
        <label>Total Power UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransmissionType__c</fullName>
        <label>Transmission Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TrimTypeText__c</fullName>
        <label>Trim Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UrbanFuelEconomyNumber__c</fullName>
        <label>Urban Fuel Economy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UrbanFuelEconomyUomId__c</fullName>
        <label>Urban Fuel Economy UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VariantName__c</fullName>
        <label>Variant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleClassText__c</fullName>
        <label>Vehicle Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WheelBaseNumber__c</fullName>
        <label>Wheel Base</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WheelBaseUomId__c</fullName>
        <label>Wheel Base UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WidthNumber__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WidthUomId__c</fullName>
        <label>Width UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>